Fix - The song & trailer title was overflowing. Reduced the font size

--- a/MvcWebRole1/Content/styles/mm.songs.css
+++ b/MvcWebRole1/Content/styles/mm.songs.css
@@ -37,7 +37,7 @@
             }
 
             .songs ul li span {
-                font-size: 18px;
+                font-size: 16px;
                 padding: 5px;
                 float: left;
                 text-align: left;
