--- a/MvcWebRole1/Content/styles/mm.trailers.css
+++ b/MvcWebRole1/Content/styles/mm.trailers.css
@@ -39,7 +39,7 @@
                 }
 
                 .trailers ul li span {
-                    font-size: 18px;
+                    font-size: 16px;
                     padding: 5px;
                     float: left;
                     text-align: left;
